k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookmyshow-deployment
  namespace: bookmyshow
  labels:
    app: bookmyshow

spec:
  replicas: 2
  revisionHistoryLimit: 5

  selector:
    matchLabels:
      app: bookmyshow

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0

  template:
    metadata:
      labels:
        app: bookmyshow

    spec:
      containers:
        - name: bookmyshow
          image: asia-south1-docker.pkg.dev/bookmyshow-500116/bookmyshow-repo/bookmyshow:${IMAGE_TAG}
          imagePullPolicy: Always

          ports:
            - containerPort: 8080

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "300m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /healthz
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 20

          securityContext:
            runAsNonRoot: true
            runAsUser: 1001
            allowPrivilegeEscalation: false

      restartPolicy: Always
