k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bookmyshow-service
  namespace: bookmyshow
  labels:
    app: bookmyshow

spec:
  type: LoadBalancer

  selector:
    app: bookmyshow

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
