k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: bookmyshow-ingress
  namespace: bookmyshow

  annotations:
    kubernetes.io/ingress.class: gce

spec:
  defaultBackend:
    service:
      name: bookmyshow-svc
      port:
        number: 80

  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bookmyshow-svc
                port:
                  number: 80
